added simple error handling

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         </div>
 
         <label class="field">
+          <span id="projectError" class="error-text" hidden></span>
           <span>Name</span>
           <input id="projectName" name="name" type="text" placeholder="e.g. Work" required />
         </label>
