simple language corrections

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="main-head">
           <h2 class="listtitle" id="listTitle">Inbox</h2>
           <p class="hint" id="offlineHint" hidden>
-            Offline: read-only (inga ändringar)
+            Offline: read-only
           </p>
         </div>
 
